# webcontest

./: .gitignore  README.md
node-backend/: app.coffee  app.js  package.json  server.js  stub_data.coffee
rails-backend/: Gemfile  Rakefile  config.ru  public
rails-backend/app/controllers/: spa_controller.rb
rails-backend/app/views/layouts/: application.html.erb
rails-backend/config/: application.rb  environment.rb  routes.rb
rails-backend/config/environments/: development.rb  production.rb  test.rb
rails-backend/config/initializers/: secret_token.rb  session_store.rb
sandbox/: CMakeLists.txt
sandbox/include/: abstractconfig.h  executable.hpp  help.hpp  javaconfig.h  nativeconfig.h  options.hpp  output.h  printer.hpp  results.hpp  security_manager.hpp  security_manager_mock.hpp  stats.hpp  syscalls32.h  syscalls64.h  syscallshandler.h
sandbox/src/: abstractconfig.cpp  executable.cpp  javaconfig.cpp  main.cpp  main2.cpp  nativeconfig.cpp  options.cpp  output.cpp  printer.cpp  syscalls32.cpp  syscalls64.cpp  syscallshandler.cpp
sandbox/test/: example.cpp  executable_test.cpp  options_test.cpp  printer_test.cpp
sandbox/test/unit/: executable_test.cpp  options_test.cpp  printer_test.cpp
sandbox/test/unit/mocks/: security_manager_mock.hpp
webcontest-spike/: webcontest.rb  webcontest_test.rb
www-client/: Makefile  index.html  toaster.coffee
www-client/css/: custom.css
www-client/release/: app-debug.js  app.js  templates.js
www-client/release/toaster/: app.js  glue.js  gui.js  local_storage.js  use_case.js  utils.js
www-client/src/: app.coffee  glue.coffee  gui.coffee  local_storage.coffee  use_case.coffee  utils.coffee
www-client/templates/: contest-list.tmpl  demo.tmpl  edit-test.tmpl  example.tmpl  layout-center.tmpl  layout-navbar.tmpl  loading.tmpl  problem-description.tmpl  problem-tab-code.tmpl  problem-tab-my-submissions.tmpl  problem-tab-submit.tmpl  problem-tab-tests.tmpl  problem.tmpl  ranking.tmpl  settings.tmpl  sign-in.tmpl  status.tmpl  welcome.tmpl
www-client/vendors/: jquery-ui-1.9.2.custom.min.js
www-prototype/: index.html
www-prototype/css/: bootstrap.min.css  custom.css
www-prototype/src/: api_client.coffee  app.coffee  glue.coffee  gui.coffee  local_storage.coffee  use_case.coffee  utils.coffee  websocket.coffee
www-prototype/templates/: alert.tmpl  code.tmpl  main.tmpl  problem.tmpl  ranking.tmpl  submissions.tmpl
